Remove users/me endpoint
